#167221045 fixed tree alignement

--- a/alyvix-ui/src/app/ax-designer/tree/tree-node/tree-node.component.scss
+++ b/alyvix-ui/src/app/ax-designer/tree/tree-node/tree-node.component.scss
@@ -1,12 +1,15 @@
 .tree-node{
     height: 32px;
+    margin-bottom: 4px;
+    margin-top: 4px;
     width: 200px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 
     &.primary{
-        width: 232px;
+        width: 233px;
+        z-index: 100;
     }
 }
 .boxEntity {
